added new project page, fixed links

--- a/pages/excel-web-tools.html
+++ b/pages/excel-web-tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Laurence Jang | about me</title>
+    <title>Laurence Jang | Excel web tools</title>
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,9 +24,9 @@
                 </button>
                 <nav class="primary-nav" id="primary-nav">
                     <ul role="list" class="nav-list">
-                        <li><a href="index.html">home</a></li>
-                        <li><a href="works.html">works</a></li>
-                        <li><a href="contact.html">contact</a></li>
+                        <li><a href="../index.html">home</a></li>
+                        <li><a href="../works.html">works</a></li>
+                        <li><a href="../contact.html">contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -63,8 +63,6 @@
                 
             </p>
         </section>
-
-
     </main>
 
     <footer class="footer">
